--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"license": "ISC",
 	"type": "commonjs",
 	"dependencies": {
+		"axios": "^1.11.0",
 		"cors": "^2.8.5",
 		"express": "^5.1.0",
 		"helmet": "^8.1.0",
